--- a/pre-registration-ui/src/app/shared/dialoug/dialoug.component.html
+++ b/pre-registration-ui/src/app/shared/dialoug/dialoug.component.html
@@ -103,7 +103,7 @@
           </h3>
           <div>
             <div *ngFor="let message of item.fileText">
-              <div>{{ message }}</div>
+              <div [innerHTML]="message"></div> <!-- Render message as HTML -->
             </div>
           </div>
         </div>
@@ -112,20 +112,20 @@
   </mat-dialog-content>
   <mat-dialog-actions [dir]="input.textDirectionArr[0]">
     <mat-checkbox (change)="onSelectCheckbox()"></mat-checkbox>
-      <span class="content-display-iniline-block" *ngFor="let item of input.data; let last = last">{{ item.labels.consent.checkCondition }}
+    <span class="content-display-iniline-block" *ngFor="let item of input.data; let last = last">{{ item.labels.consent.checkCondition }}
         <span *ngIf="!last">&nbsp;/&nbsp;</span>
       </span>
   </mat-dialog-actions>
   <p></p>
   <mat-dialog-actions align="end" [dir]="input.textDirectionArr[0]">
     <button mat-button class="btn-cancel" mat-dialog-close
-      (click)="onNoClick(); cancelConsent(input.data); userRedirection(input.textDirectionArr[0])">{{
+            (click)="onNoClick(); cancelConsent(input.data); userRedirection(input.textDirectionArr[0])">{{
       input.cancelBtn }}</button>
     <span class="spacer"></span>
     <div *ngFor="let item of input.data">
       <div *ngIf="item.langCode === input.userPrefferedlangCode">
         <button [ngClass]="isChecked ? 'btn-submit-disabled' : 'btn-submit'" [disabled]="isChecked" mat-button
-          (click)="onNoClick(item.labels.consent.acceptButton)" cdkFocusInitial>
+                (click)="onNoClick(item.labels.consent.acceptButton)" cdkFocusInitial>
           {{ item.labels.consent.acceptButton }}
         </button>
       </div>
