--- a/pre-registration-ui/src/app/auth/login/login.component.css
+++ b/pre-registration-ui/src/app/auth/login/login.component.css
@@ -29,8 +29,8 @@
   padding:20px 20px;
   padding-bottom:2px;
   height: auto;
-  margin-right: 40%;
-  margin-bottom: 30%;
+  margin-left: 65%;
+  margin-top: 10%;
   line-height: 2rem;
 }
 
