--- a/pre-registration-ui/src/app/core/contact/contact.component.html
+++ b/pre-registration-ui/src/app/core/contact/contact.component.html
@@ -1,1 +1,1 @@
-<p>Refer <a href="https://www.mosip.io/contact.php" target="_blank" rel="noopener">https://www.mosip.io/contact.php</a></p>
+<p>Refer <a href="http://digitalagenda.gov.bz" target="_blank" rel="noopener">http://digitalagenda.gov.bz</a></p>
