--- a/pre-registration-ui/src/app/feature/demographic/demographic/demographic.component.html
+++ b/pre-registration-ui/src/app/feature/demographic/demographic/demographic.component.html
@@ -204,7 +204,7 @@
                                   #yyyy (focusout)="onDOBChange();onChangeHandler(field.id);"
                                   (change)="onChangeHandler(field.id)" [disabled]="readOnlyMode" />
                               </mat-form-field> -->
-                              <mat-form-field appearance="legacy">
+                              <mat-form-field appearance="legacy" >
                                 <mat-label>{{localeDtFormat}}</mat-label>
                                 <input matInput [formControlName]="field.id + '_dateCtrl'"
                                   placeholder="{{localeDtFormat}}"
@@ -214,16 +214,16 @@
                                 <mat-datepicker #dp></mat-datepicker>
                               </mat-form-field>
                             </div>
-                            <div class="user__pref">
+                            <div class="user__pref" [ngStyle]="{ visibility: 'hidden'}">
                               {{ "demographic.text_or" | translate }}
                             </div>
                             <div class="user__age">
-                              <mat-form-field appearance="legacy">
+                              <mat-form-field appearance="legacy" [ngStyle]="{ visibility: 'hidden'}">
                                 <input type="number" class="form-control" matInput [value]="currentAge" #age
                                   [disabled]="readOnlyMode" placeholder="{{ 'demographic.label_age' | translate }}"
                                   (change)="onAgeChange(field.id);onChangeHandler(field.id);">
                               </mat-form-field>
-                              <div class="user__age--years">
+                              <div class="user__age--years" [ngStyle]="{ visibility: 'hidden'}">
                                 {{ "demographic.text_years" | translate }}
                               </div>
                             </div>
@@ -234,7 +234,7 @@
                               (userForm.get(field.id).touched &&
                                 userForm.get(field.id).hasError('incorrect'))" [dir]="userPrefLanguageDir">
                             {{demographiclabels.validation.DOB_validation}}
-                          </div>
+                          </div >
                         </span>
                       </ng-container>
                       <!-- Date fields-->
