Added code changes to hide 'Guardian Details' section when age is greater than 16

--- a/pre-registration-ui/src/app/feature/demographic/demographic/demographic.component.html
+++ b/pre-registration-ui/src/app/feature/demographic/demographic/demographic.component.html
@@ -25,7 +25,7 @@
         <form [formGroup]="userForm" class="user__form">
           <!-- Create as rows as many as alignmentGroups in UI specs -->
           <span *ngFor="let alignmentGroup of alignmentGroups">
-            <div class="alignmentGroupContainer">
+            <div class="alignmentGroupContainer" *ngIf="getTranslation(alignmentGroup) !=null">
              <span>
               <div class="alignmentGroupLabel">
               <mat-label>{{ getTranslation(alignmentGroup) }}</mat-label>
